--- a/BreakingBadApp/package.json
+++ b/BreakingBadApp/package.json
@@ -13,9 +13,10 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~8.2.14",
+    "@angular/common": "^8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
@@ -35,6 +36,7 @@
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/lab": "3.1.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
